# ble

./: CMakeLists.txt  README.md  sources.cmake  sources.mk
include/pble/: ble.h  ble_interface.h  ble_overrides.h
src/: common.c  dummy.c  esp32.c  nrf52.c  zephyr.c
